# sap_http

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  test.sh
cmake/: sap_http_config.cmake.in
include/core/: result.h  types.h
include/net/: http.h
src/core/: core.cppm  result.cppm  types.cppm
src/net/: client.cpp  client_impl.cpp  headers.cpp  http.cppm  request.cpp  response_impl.cpp  server.cpp  url.cpp  url_impl.cpp
tests/: client_tests.cpp  headers_tests.cpp  integration_tests.cpp  request_tests.cpp  response_tests.cpp  server_tests.cpp  url_tests.cpp
